--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2 class="Content">Fight the power of the Void.</h2>       
         <p class="Content">Awake from hibernation and explore the silent hallways of the spaceship to uncover the fate of your crew.</p><br>
 
-        <a href="WebGL/malnetha.html"><p class="Content">Malnetha</p></a><br>
+        <a href="WebGL/Malnetha.html"><p class="Content">Malnetha</p></a><br>
         
         <img class="homeImages" src="imgs/witchHeadNebula.jpg"><br>
         <p class="Conten">Credit: NASA/JPL-Caltech</p>
